--- a/src/blocks/modules/likeItem/likeItem.scss
+++ b/src/blocks/modules/likeItem/likeItem.scss
@@ -36,7 +36,7 @@
         margin-right: 12px;
         font-size: rem(16);
         line-height: 1.25;
-        font-weight: $font-weight-light;
+        font-weight: $font-weight-normal;
         color: $text-silver;
 
         &-output {
