--- a/src/blocks/modules/spoiler/spoiler.scss
+++ b/src/blocks/modules/spoiler/spoiler.scss
@@ -63,7 +63,7 @@
 
         &-content {
             font-size: rem(16);
-            font-weight: $font-weight-light;
+            font-weight: $font-weight-normal;
             line-height: 1.5;
             color: $black;
         }
