--- a/src/blocks/modules/video/video.scss
+++ b/src/blocks/modules/video/video.scss
@@ -130,7 +130,7 @@
             flex: 1 1 auto;
             font-size: rem(14);
             line-height: 1.43;
-            font-weight: $font-weight-light;
+            font-weight: $font-weight-normal;
         }
     }
 
