--- a/src/styles/pages/ads-user-ads.scss
+++ b/src/styles/pages/ads-user-ads.scss
@@ -6,27 +6,6 @@
         align-items: flex-start;
         margin-bottom: 32px;
         position: relative;
-
-        a{
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            @media (max-width: $media-md) {
-                flex-direction: row;
-                align-items: stretch;
-                justify-content: flex-start;
-                margin-bottom: 0;
-
-                &__inner {
-                    &:last-of-type {
-                        .ads-user-item {
-                            border-bottom: none;
-                            margin-bottom: 24px;
-                        }
-                    }
-                }
-            }
-        }
         @media (max-width: $media-md) {
             flex-direction: row;
             align-items: stretch;
@@ -48,9 +27,6 @@
         &:hover {
             z-index: 2;
             text-decoration: none;
-            a {
-                text-decoration: none;
-            }
 
             .ads-user-item__img {
                 &:after {
@@ -65,19 +41,12 @@
             .ads-user-item__popup {
                 opacity: 1;
                 pointer-events: all;
-                @media (max-width: $media-lg){
+                @media (max-width: $media-lg) {
                     display: none;
                 }
             }
-        }
-
-        &--not-publish {
-            .ads-user-item__img {
-                background-color: #d8d8d8;
-                opacity: .3;
-                &:after {
-                    display: none;
-                }
+            a {
+                text-decoration: none;
             }
         }
 
@@ -178,7 +147,7 @@
                     justify-content: flex-start;
                 }
 
-                .date{
+                .date {
                     margin-right: 16px;
                     flex-shrink: 0;
                 }
@@ -199,27 +168,27 @@
         }
 
         &__popup {
+            @include transition();
             position: absolute;
-            width: 32px;
-            height: 32px;
             top: 8px;
             right: 8px;
+            width: 32px;
+            height: 32px;
             opacity: 0;
             pointer-events: none;
             will-change: opacity;
-            @include transition();
-            @media (max-width: $media-lg){
+            @media (max-width: $media-lg) {
                 display: none;
             }
 
-            .ads-user-item__btn{
+            .ads-user-item__btn {
                 @include transition();
                 display: block;
                 width: 32px;
                 height: 32px;
+                border: none;
                 background-color: $white;
                 border-radius: 50%;
-                border: none;
                 background-image: url(../img/icons/icon-dots.svg);
                 background-position: center center;
                 background-repeat: no-repeat;
@@ -228,34 +197,34 @@
                     background-color: $silver-light;
                     & + .ads-user-item__popup-content {
                         opacity: 1;
-                        pointer-events: all
+                        pointer-events: all;
                     }
                 }
             }
 
-            &-content{
+            &-content {
                 @include transition();
+                position: absolute;
+                top: 100%;
+                left: 0;
+                width: 185px;
+                padding: 8px 0;
                 opacity: 0;
                 pointer-events: none;
                 background-color: $white;
                 border-radius: 5px;
                 box-shadow: 0 8px 40px 0 rgba(0, 0, 0, 0.2);
-                width: 185px;
-                padding: 8px 0;
-                position: absolute;
-                top:100%;
                 margin-top: 16px;
                 margin-bottom: 0;
-                left: 0;
                 list-style: none;
                 &:before {
-                    z-index: 2;
-                    position: absolute;
-                    top: -16px;
-                    left: 0;
-                    right: 0;
                     content: '';
                     display: block;
+                    position: absolute;
+                    z-index: 2;
+                    top: -16px;
+                    right: 0;
+                    left: 0;
                     width: 100%;
                     height: 16px;
                 }
@@ -268,12 +237,12 @@
             &-item {
                 display: block;
             }
-            &-link{
-                background-color: transparent;
+            &-link {
                 display: block;
                 width: 100%;
                 border: none;
                 padding: 6px 16px 10px;
+                background-color: transparent;
                 font-size: rem(16);
                 line-height: 1.25;
                 color: $text-black;
@@ -281,7 +250,37 @@
                 &:hover {
                     background-color: $silver-light;
                 }
+            }
+        }
 
+        &--not-publish {
+            .ads-user-item__img {
+                background-color: #d8d8d8;
+                opacity: .3;
+                &:after {
+                    display: none;
+                }
+            }
+        }
+
+        a {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            @media (max-width: $media-md) {
+                flex-direction: row;
+                align-items: stretch;
+                justify-content: flex-start;
+                margin-bottom: 0;
+
+                &__inner {
+                    &:last-of-type {
+                        .ads-user-item {
+                            border-bottom: none;
+                            margin-bottom: 24px;
+                        }
+                    }
+                }
             }
         }
     }
@@ -369,6 +368,4 @@
             }
         }
     }
-
-
 }
