--- a/src/styles/pages/main-page.scss
+++ b/src/styles/pages/main-page.scss
@@ -177,7 +177,7 @@
             font-size: rem(15);
             line-height: 20px;
             color: $black;
-            font-weight: $font-weight-light;
+            font-weight: $font-weight-normal;
         }
     }
 
