--- a/src/styles/pages/text-page.scss
+++ b/src/styles/pages/text-page.scss
@@ -81,7 +81,7 @@
                 margin: 0 16px 16px;
                 font-size: rem(16);
                 line-height: 1.25;
-                font-weight: $font-weight-light;
+                font-weight: $font-weight-normal;
                 color: $text-silver;
                 @media (max-width: $media-md) {
                     margin: 0 16px 0 0;
@@ -112,7 +112,7 @@
                     padding: 0;
                     background: none;
                     font-size: rem(16);
-                    font-weight: $font-weight-light;
+                    font-weight: $font-weight-normal;
                     line-height: 1.25;
                     color: $text-silver;
                 }
@@ -278,7 +278,7 @@
                 margin-right: 32px;
                 font-size: rem(16);
                 line-height: 1.25;
-                font-weight: $font-weight-light;
+                font-weight: $font-weight-normal;
                 color: $text-silver;
                 display: flex;
                 align-items: center;
@@ -301,7 +301,7 @@
                     padding: 0;
                     background: none;
                     font-size: rem(16);
-                    font-weight: $font-weight-light;
+                    font-weight: $font-weight-normal;
                     line-height: 1.25;
                     color: $text-silver;
                     vertical-align: middle;
@@ -330,7 +330,7 @@
     p {
         margin-bottom: 32px;
         font-size: rem(20);
-        font-weight: $font-weight-light;
+        font-weight: $font-weight-normal;
         line-height: 1.6;
         letter-spacing: normal;
         color: $black;
