--- a/src/templates/pages/ads-user-ads.html
+++ b/src/templates/pages/ads-user-ads.html
@@ -131,6 +131,8 @@
         </div>
     </div>
 </div>
+{% include 'ads-modals-add/ads-modals-add.html' %}
+{% include 'ads-modals-remove/ads-modals-remove.html' %}
 {% endblock %}
 
 {% block scripts %}
