--- a/src/templates/pages/ads-user-myads.html
+++ b/src/templates/pages/ads-user-myads.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col-12 main-header main-header--ads">
             <h1>Мои объявления</h1>
-            <button type="button" class="btn btn--primary  js-btn-addAds"><i class="btn__icon btn__icon--left btn__icon--plus"></i>Добавить объявление</button>
+            <button type="button" class="btn btn--primary  js-ads-add"><i class="btn__icon btn__icon--left btn__icon--plus"></i>Добавить объявление</button>
         </div>
     </div>
     <div class="row">
@@ -49,13 +49,13 @@
                             <button class="ads-user-item__btn"></button>
                             <ul class="ads-user-item__popup-content">
                                 <li class="ads-user-item__popup-item">
-                                    <button type="button" class="ads-user-item__popup-link">Редактировать</button>
+                                    <button type="button" class="js-ads-edit ads-user-item__popup-link">Редактировать</button>
                                 </li>
                                 <li class="ads-user-item__popup-item">
                                     <button type="button" class="ads-user-item__popup-link">Снять с публикации</button>
                                 </li>
                                 <li class="ads-user-item__popup-item">
-                                    <button type="button" class="ads-user-item__popup-link">Удалить</button>
+                                    <button type="button" class="js-ads-remove ads-user-item__popup-link">Удалить</button>
                                 </li>
                             </ul>
                         </div>
@@ -85,13 +85,13 @@
                             <button class="ads-user-item__btn"></button>
                             <ul class="ads-user-item__popup-content">
                                 <li class="ads-user-item__popup-item">
-                                    <button type="button" class="ads-user-item__popup-link">Редактировать</button>
+                                    <button type="button" class="js-ads-edit ads-user-item__popup-link">Редактировать</button>
                                 </li>
                                 <li class="ads-user-item__popup-item">
                                     <button type="button" class="ads-user-item__popup-link">Снять с публикации</button>
                                 </li>
                                 <li class="ads-user-item__popup-item">
-                                    <button type="button" class="ads-user-item__popup-link">Удалить</button>
+                                    <button type="button" class="js-ads-remove ads-user-item__popup-link">Удалить</button>
                                 </li>
                             </ul>
                         </div>
@@ -121,13 +121,13 @@
                             <button class="ads-user-item__btn"></button>
                             <ul class="ads-user-item__popup-content">
                                 <li class="ads-user-item__popup-item">
-                                    <button type="button" class="ads-user-item__popup-link">Редактировать</button>
+                                    <button type="button" class="js-ads-edit ads-user-item__popup-link">Редактировать</button>
                                 </li>
                                 <li class="ads-user-item__popup-item">
                                     <button type="button" class="ads-user-item__popup-link">Снять с публикации</button>
                                 </li>
                                 <li class="ads-user-item__popup-item">
-                                    <button type="button" class="ads-user-item__popup-link">Удалить</button>
+                                    <button type="button" class="js-ads-remove ads-user-item__popup-link">Удалить</button>
                                 </li>
                             </ul>
                         </div>
@@ -157,13 +157,13 @@
                             <button class="ads-user-item__btn"></button>
                             <ul class="ads-user-item__popup-content">
                                 <li class="ads-user-item__popup-item">
-                                    <button type="button" class="ads-user-item__popup-link">Редактировать</button>
+                                    <button type="button" class="js-ads-edit ads-user-item__popup-link">Редактировать</button>
                                 </li>
                                 <li class="ads-user-item__popup-item">
                                     <button type="button" class="ads-user-item__popup-link">Снять с публикации</button>
                                 </li>
                                 <li class="ads-user-item__popup-item">
-                                    <button type="button" class="ads-user-item__popup-link">Удалить</button>
+                                    <button type="button" class="js-ads-remove ads-user-item__popup-link">Удалить</button>
                                 </li>
                             </ul>
                         </div>
@@ -193,13 +193,13 @@
                             <button class="ads-user-item__btn"></button>
                             <ul class="ads-user-item__popup-content">
                                 <li class="ads-user-item__popup-item">
-                                    <button type="button" class="ads-user-item__popup-link">Редактировать</button>
+                                    <button type="button" class="js-ads-edit ads-user-item__popup-link">Редактировать</button>
                                 </li>
                                 <li class="ads-user-item__popup-item">
                                     <button type="button" class="ads-user-item__popup-link">Снять с публикации</button>
                                 </li>
                                 <li class="ads-user-item__popup-item">
-                                    <button type="button" class="ads-user-item__popup-link">Удалить</button>
+                                    <button type="button" class="js-ads-remove ads-user-item__popup-link">Удалить</button>
                                 </li>
                             </ul>
                         </div>
@@ -229,13 +229,13 @@
                             <button class="ads-user-item__btn"></button>
                             <ul class="ads-user-item__popup-content">
                                 <li class="ads-user-item__popup-item">
-                                    <button type="button" class="ads-user-item__popup-link">Редактировать</button>
+                                    <button type="button" class="js-ads-edit ads-user-item__popup-link">Редактировать</button>
                                 </li>
                                 <li class="ads-user-item__popup-item">
                                     <button type="button" class="ads-user-item__popup-link">Опубликовать</button>
                                 </li>
                                 <li class="ads-user-item__popup-item">
-                                    <button type="button" class="ads-user-item__popup-link">Удалить</button>
+                                    <button type="button" class="js-ads-remove ads-user-item__popup-link">Удалить</button>
                                 </li>
                             </ul>
                         </div>
@@ -265,13 +265,13 @@
                             <button class="ads-user-item__btn"></button>
                             <ul class="ads-user-item__popup-content">
                                 <li class="ads-user-item__popup-item">
-                                    <button type="button" class="ads-user-item__popup-link">Редактировать</button>
+                                    <button type="button" class="js-ads-edit ads-user-item__popup-link">Редактировать</button>
                                 </li>
                                 <li class="ads-user-item__popup-item">
                                     <button type="button" class="ads-user-item__popup-link">Опубликовать</button>
                                 </li>
                                 <li class="ads-user-item__popup-item">
-                                    <button type="button" class="ads-user-item__popup-link">Удалить</button>
+                                    <button type="button" class="js-ads-remove ads-user-item__popup-link">Удалить</button>
                                 </li>
                             </ul>
                         </div>
@@ -301,13 +301,13 @@
                             <button class="ads-user-item__btn"></button>
                             <ul class="ads-user-item__popup-content">
                                 <li class="ads-user-item__popup-item">
-                                    <button type="button" class="ads-user-item__popup-link">Редактировать</button>
+                                    <button type="button" class="js-ads-edit ads-user-item__popup-link">Редактировать</button>
                                 </li>
                                 <li class="ads-user-item__popup-item">
                                     <button type="button" class="ads-user-item__popup-link">Опубликовать</button>
                                 </li>
                                 <li class="ads-user-item__popup-item">
-                                    <button type="button" class="ads-user-item__popup-link">Удалить</button>
+                                    <button type="button" class="js-ads-remove ads-user-item__popup-link">Удалить</button>
                                 </li>
                             </ul>
                         </div>
@@ -317,6 +317,7 @@
         </div>
     </div>
 </div>
+{% include 'ads-modals-add/ads-modals-add.html' %}
 {% endblock %}
 
 {% block scripts %}
