--- a/src/templates/pages/profile.html
+++ b/src/templates/pages/profile.html
@@ -14,7 +14,7 @@
                 <!-- if private -->
                 <ul class="profile-articles">
                     <li class="profile-articles__item">
-                        <a href="#0" class="plus"></a>
+                        <a href="#0" class="plus js-ads-add"></a>
                         <a href="#0" class="profile-articles__link">
                             <div class="text">Мои объявления</div>
                             <div class="count">5</div>
@@ -163,7 +163,7 @@
                 <!-- if private -->
                 <ul class="profile-articles profile-articles--mobile">
                     <li class="profile-articles__item">
-                        <a href="#0" class="plus"></a>
+                        <a href="#0" class="plus js-ads-add"></a>
                         <a href="#0" class="profile-articles__link">
                             <div class="text">Мои объявления</div>
                             <div class="count">5</div>
@@ -297,4 +297,5 @@
     {% include 'profile-edit/profile-edit.html' %}
     {% include 'regards-modal/regards-modal.html' %}
     {% include 'profile-active-modal/profile-active-modal.html' %}
+    {% include 'ads-modals-add/ads-modals-add.html' %}
 {% endblock %}
