--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -24,3 +24,5 @@
 @import 'modules/profile-edit/profile-edit';
 @import 'modules/regards-modal/regards-modal';
 @import 'modules/profile-active-modal/profile-active-modal';
+@import 'modules/ads-modals-add/ads-modals-add';
+@import 'modules/ads-modals-remove/ads-modals-remove';
