--- a/src/blocks/modules/dataselect/dataselect.scss
+++ b/src/blocks/modules/dataselect/dataselect.scss
@@ -11,7 +11,7 @@
         box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
         background-color: $white;
         font-size: rem(16);
-        font-weight: $font-weight-light;
+        font-weight: $font-weight-normal;
         line-height: 1.25;
         letter-spacing: normal;
         color: $text-black;
@@ -46,7 +46,7 @@
         box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
         background-color: rgba(246, 92, 81, 0.3);
         font-size: rem(16);
-        font-weight: $font-weight-light;
+        font-weight: $font-weight-normal;
         line-height: 1.25;
         letter-spacing: normal;
         color: $text-black;
@@ -127,7 +127,7 @@
                 &-title {
                     padding: 0;
                     font-size: rem(16);
-                    font-weight: $font-weight-light;
+                    font-weight: $font-weight-normal;
                     line-height: 1.25;
                     text-align: center;
                     color: #1a1a1a;
@@ -204,7 +204,7 @@
                     height: 40px;
                     border-radius: 50%;
                     font-size: rem(16);
-                    font-weight: $font-weight-light;
+                    font-weight: $font-weight-normal;
                     line-height: 1.25;
                     text-align: center;
                     color: #1a1a1a;
@@ -253,7 +253,7 @@
                     height: 70px;
                     border-radius: 50%;
                     font-size: rem(16);
-                    font-weight: $font-weight-light;
+                    font-weight: $font-weight-normal;
                     line-height: 1.25;
                     text-align: center;
                     color: #1a1a1a;
@@ -295,7 +295,7 @@
                     height: 70px;
                     border-radius: 50%;
                     font-size: rem(16);
-                    font-weight: $font-weight-light;
+                    font-weight: $font-weight-normal;
                     line-height: 1.25;
                     text-align: center;
                     color: #1a1a1a;
@@ -316,7 +316,7 @@
                 width: 40px;
                 height: 40px;
                 font-size: rem(16);
-                font-weight: $font-weight-light;
+                font-weight: $font-weight-normal;
                 line-height: 1.25;
                 color: $border-20;
             }
