--- a/src/templates/pages/ads-user.html
+++ b/src/templates/pages/ads-user.html
@@ -50,7 +50,7 @@
                 <div class="price price--pc"><b>500</b> ₽</div>
                 <a href="tel:+79435431263" class="phone">+7 943 543 12 63</a>
                 <a href="mailto:erganom@gmail.com" class="email">erganom@gmail.com</a>
-                <div class="people">
+                <a href="" class="people">
                     <div class="avatar">
                         <img src="img/avatar.jpg" alt="Евгений Обухов">
                     </div>
@@ -58,7 +58,7 @@
                         <div class="name">Евгений Обухов</div>
                         <div class="desc">Ведущий геодезист</div>
                     </div>
-                </div>
+                </a>
                 <div class="control-btn control-btn--pc" >
                     <a href="#" class="btn btn--secondary">2 объвления пользователя</a>
                     <button type="button" class="js-ads-edit btn btn--secondary">Редактировать</button>
