--- a/src/styles/pages/ads-list.scss
+++ b/src/styles/pages/ads-list.scss
@@ -14,6 +14,16 @@
         .selects {
             justify-content: flex-start;
         }
+        @media (max-width: 520px){
+            .bottom .buttons {
+                margin-top: 24px;
+
+                .btn {
+                    padding-top: 18px;
+                    padding-bottom: 18px;
+                }
+            }
+        }
     }
 
     .results-nav__select {
@@ -23,6 +33,7 @@
                 margin-right: 0;
             }
         }
+
     }
 
 
