--- a/src/templates/pages/results.html
+++ b/src/templates/pages/results.html
@@ -186,6 +186,7 @@
                                     оборудования
                                 </div>
                                 <div class="employee-info__area">Безопасность производства</div>
+                                <div class="employee-info__vacation">отуствует с 28 фев по 5 мар</div>
                             </div>
                             <ul class="employee-contacts">
                                 <li class="employee-contacts__item employee-contacts__item--address">
