--- a/src/blocks/modules/profile-edit/profile-edit.scss
+++ b/src/blocks/modules/profile-edit/profile-edit.scss
@@ -25,11 +25,11 @@
             .modal-gallery__controls {
                 margin-bottom: 24px;
                 @media(max-width: $media-sm) {
-                    position: absolute;
-                    z-index: 1;
+                    position: fixed;
+                    z-index: 2;
                     top: 0;
-                    left: 0;
-                    width: 100%;
+                    right: 0;
+                    width: auto;
                     margin: 0;
                     padding: 16px;
                 }
@@ -57,8 +57,23 @@
         line-height: 1.25;
         text-align: center;
         @media(max-width: $media-sm) {
+            @include transition();
             font-size: 1.75rem;
             line-height: 1.29;
+            background: $white;
+            border-bottom: 1px solid transparent;
+            &.scroll {
+                position: fixed;
+                z-index: 1;
+                top: 0;
+                left: 0;
+                width: 100%;
+                font-size: 1rem;
+                line-height: 1.25;
+                text-align: left;
+                padding: 20px 60px 24px 16px;
+                border-color: rgba(0, 0, 0, 0.1);
+            }
         }
     }
 
