--- a/src/styles/base/_table.scss
+++ b/src/styles/base/_table.scss
@@ -1,7 +1,22 @@
 //
 // Basic Bootstrap table
 //
-
+.table-inner {
+    @media (max-width: $media-md) {
+        padding-right: 16px;
+        margin-right: -16px;
+        margin-left: -16px;
+        padding-left: 16px;
+        max-width: 100vw;
+        overflow: auto !important;
+        -ms-overflow-style: none;
+        overflow: -moz-scrollbars-none;
+        scrollbar-width: none;
+        &::-webkit-scrollbar {
+            display: none;
+        }
+    }
+}
 .table {
     margin-top: 24px;
     margin-bottom: 48px;
@@ -11,20 +26,11 @@
     border-collapse: separate;
     border-color: transparent;
     border-spacing: 0;
-    display: inline-block;
-    overflow: auto !important;
-    -ms-overflow-style: none;
-    overflow: -moz-scrollbars-none;
-    scrollbar-width: none;
-    &::-webkit-scrollbar {
-        display: none;
-    }
+    display:table;
     @media (max-width: $media-md) {
-        margin-left: -16px;
-        padding-left: 16px;
-        max-width: 100vw;
-        margin-right: -16px;
+        padding-right: 16px;
     }
+
 
     tr {
         @media (max-width: $media-md) {
