--- a/src/templates/pages/text-page.html
+++ b/src/templates/pages/text-page.html
@@ -833,52 +833,55 @@
             </div>
 
             <div class="col-xl-10 col-12">
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th scope="col">Наименование услуги</th>
-                        <th scope="col">ПАО «Металлинвестбанк»</th>
-                        <th scope="col">ПАО «Росбанк»</th>
-                        <th scope="col">ПАО «Сбербанк»</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td><span>Тип карты</span></td>
-                        <td><span>Visa Platinum / Visa Platinum ОМК-Участие MasterCard Gold</span></td>
-                        <td><span>Mastercard Standart Contactless / Visa Classic PayWave / МИР Классическая (доход до 50 т.р.)</span>
-                            <span>Mastercard Gold Contactless / Visa Gold PayWave / МИР Премиальная (если доход от 50 т.р. до 150 т.р.) </span>
+                <div class="table-inner">
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th scope="col">Наименование услуги</th>
+                            <th scope="col">ПАО «Металлинвестбанк»</th>
+                            <th scope="col">ПАО «Росбанк»</th>
+                            <th scope="col">ПАО «Сбербанк»</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td><span>Тип карты</span></td>
+                            <td><span>Visa Platinum / Visa Platinum ОМК-Участие MasterCard Gold</span></td>
+                            <td><span>Mastercard Standart Contactless / Visa Classic PayWave / МИР Классическая (доход до 50 т.р.)</span>
+                                <span>Mastercard Gold Contactless / Visa Gold PayWave / МИР Премиальная (если доход от 50 т.р. до 150 т.р.) </span>
                                 <span>Visa Signature #МожноВСЁ (доход от 150 т.р.)</span></td>
-                        <td><span>MasterCard Gold / Visa Gold</span></td>
-                    </tr>
-                    <tr>
-                        <td><span>Стоимость годового обслуживания</span></td>
-                        <td><span><b>бесплатно</b></span></td>
-                        <td><span><b>бесплатно</b></span></td>
-                        <td><span><b>бесплатно</b></span></td>
-                    </tr>
-                    <tr>
-                        <td><span>Снятие наличных в собственных банкоматах</span></td>
-                        <td><span><b>бесплатно</b></span></td>
-                        <td><span><b>бесплатно</b></span></td>
-                        <td><span><b>бесплатно</b></span></td>
-                    </tr>
-                    <tr>
-                        <td><span>Снятие наличных в банкоматах сторонних банков</span></td>
-                        <td><span><b>три снятия в месяц в любых банкоматах — бесплатно</b></span>
-                            <span>Банк «Открытие» — 0,5%, другие — 1%, min 300 руб.</span></td>
-                        <td><span><b>бесплатно по всей территории РФ и за границей</b></span></td>
-                        <td><span>1%, min 100 руб. / 3 долл. США / 3 евро</span></td>
-                    </tr>
-                    <tr>
-                        <td><span>Снятие наличных в банкоматах сторонних банков</span></td>
-                        <td><span><b>три снятия в месяц в любых банкоматах — бесплатноо</b></span>
-                        <span>Банк «Открытие» — 0,5%, другие — 1%, min 300 руб.</span></td>
-                        <td><span><b>бесплатно по всей территории РФ и за границей</b></span></td>
-                        <td><span>1%, min 100 руб. / 3 долл. США / 3 евро</span></td>
-                    </tr>
-                    </tbody>
-                </table>
+                            <td><span>MasterCard Gold / Visa Gold</span></td>
+                        </tr>
+                        <tr>
+                            <td><span>Стоимость годового обслуживания</span></td>
+                            <td><span><b>бесплатно</b></span></td>
+                            <td><span><b>бесплатно</b></span></td>
+                            <td><span><b>бесплатно</b></span></td>
+                        </tr>
+                        <tr>
+                            <td><span>Снятие наличных в собственных банкоматах</span></td>
+                            <td><span><b>бесплатно</b></span></td>
+                            <td><span><b>бесплатно</b></span></td>
+                            <td><span><b>бесплатно</b></span></td>
+                        </tr>
+                        <tr>
+                            <td><span>Снятие наличных в банкоматах сторонних банков</span></td>
+                            <td><span><b>три снятия в месяц в любых банкоматах — бесплатно</b></span>
+                                <span>Банк «Открытие» — 0,5%, другие — 1%, min 300 руб.</span></td>
+                            <td><span><b>бесплатно по всей территории РФ и за границей</b></span></td>
+                            <td><span>1%, min 100 руб. / 3 долл. США / 3 евро</span></td>
+                        </tr>
+                        <tr>
+                            <td><span>Снятие наличных в банкоматах сторонних банков</span></td>
+                            <td><span><b>три снятия в месяц в любых банкоматах — бесплатноо</b></span>
+                                <span>Банк «Открытие» — 0,5%, другие — 1%, min 300 руб.</span></td>
+                            <td><span><b>бесплатно по всей территории РФ и за границей</b></span></td>
+                            <td><span>1%, min 100 руб. / 3 долл. США / 3 евро</span></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="table-inner">
                 <table class="table table-bordered">
                     <thead>
                     <tr>
@@ -925,6 +928,8 @@
                     </tr>
                     </tbody>
                 </table>
+                </div>
+                <div class="table-inner">
                 <table class="table table-bordered ">
                     <thead class="thead-dark">
                     <tr>
@@ -971,6 +976,8 @@
                     </tr>
                     </tbody>
                 </table>
+                </div>
+                <div class="table-inner">
                 <table class="table table-striped ">
                     <thead class="">
                     <tr>
@@ -1017,6 +1024,8 @@
                     </tr>
                     </tbody>
                 </table>
+                </div>
+                <div class="table-inner">
                 <table class="table table-dark ">
                     <thead class="">
                     <tr>
@@ -1063,6 +1072,8 @@
                     </tr>
                     </tbody>
                 </table>
+                </div>
+                <div class="table-inner">
                 <table class="table table-dark table-striped">
                     <thead class="">
                     <tr>
@@ -1109,6 +1120,7 @@
                     </tr>
                     </tbody>
                 </table>
+                </div>
             </div>
 
             <div class="col-xl-8 col-lg-10">
