add ads modal gallaryPopup-ads.js and fix gallaryPopup

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -26,3 +26,4 @@
 @import 'modules/profile-active-modal/profile-active-modal';
 @import 'modules/ads-modals-add/ads-modals-add';
 @import 'modules/ads-modals-remove/ads-modals-remove';
+@import 'modules/gallaryPopup-ads/gallaryPopup-ads';
