--- a/src/blocks/modules/ads-modals-add/ads-modals-add.scss
+++ b/src/blocks/modules/ads-modals-add/ads-modals-add.scss
@@ -24,6 +24,7 @@
             position: relative;
             z-index: -1;
             padding: 64px 32px 48px;
+            border-radius: 0;
         }
 
         .fields {
