--- a/src/blocks/modules/galleryThumbs/galleryThumbs.scss
+++ b/src/blocks/modules/galleryThumbs/galleryThumbs.scss
@@ -238,9 +238,9 @@
 
     &--border {
 
-        .swiper-slide {
-            border-radius: 5px 5px 0 0;
-        }
+        //.swiper-slide {
+        //    border-radius: 5px 5px 0 0;
+        //}
 
         .thumbs-slider__description {
             border: solid 1px $border-10;
