--- a/src/templates/pages/ads-user.html
+++ b/src/templates/pages/ads-user.html
@@ -72,6 +72,7 @@
 </div>
 {% include 'ads-modals-add/ads-modals-add.html' %}
 {% include 'ads-modals-remove/ads-modals-remove.html' %}
+{% include 'gallaryPopup-ads/gallaryPopup-ads.html' %}
 {% endblock %}
 
 {% block scripts %}
