--- a/src/blocks/modules/unknown/unknown.scss
+++ b/src/blocks/modules/unknown/unknown.scss
@@ -20,9 +20,26 @@
                     transform: translateY(-50%);
                 }
 
+                &__main{
+                    & > .swiper-wrapper {
+                        .swiper-slide{
+                            margin-bottom: 96px;
+                        }
+                    }
+
+                }
+
                 &__nav {
                     top: auto;
                     bottom: 0;
+
+                    .swiper-slide {
+                        img {
+                            width: 100%;
+                            height: 100%;
+                            @include object-fit(cover, center)
+                        }
+                    }
                 }
             }
         }
