--- a/src/blocks/modules/videoPopup/videoPopup.scss
+++ b/src/blocks/modules/videoPopup/videoPopup.scss
@@ -1,11 +1,20 @@
 .modal-content {
     &__video {
-        padding: 32px;
+        padding:0;
         .inner {
             position: relative;
             width: 100%;
             height: 0;
             padding-bottom: 56.25%;
         }
+
+        & + .thumbs-slider__description{
+            position: relative;
+            padding: 24px 32px;
+            margin-bottom: 24px;
+            border-bottom: 1px solid $border-10;
+        }
     }
+
+
 }
